<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcoverhome"
    tools:context=".Banjaran">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="28dp"
        android:text="@string/Dataran"
        android:textColor="@android:color/black"
        android:textSize="48sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="157dp"
        android:background="@drawable/buttontwo"
        android:onClick="pergikedah"
        android:text="@string/Dataran1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="227dp"
        android:background="@drawable/buttontwo"
        android:onClick="goToLembah"
        android:text="@string/Dataran2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="301dp"
        android:background="@drawable/buttontwo"
        android:onClick="goToKelantan"
        android:text="@string/Dataran3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="369dp"
        android:background="@drawable/buttontwo"
        android:onClick="goToRajang"
        android:text="@string/Dataran4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/buttontwo"
        android:onClick="goToJohor"
        android:text="@string/Dataran5" />

</RelativeLayout>